--- a/BUILD.gn
+++ b/BUILD.gn
@@ -972,6 +972,10 @@ group("devtools_frontend_resources") {
   public_deps = devtools_frontend_resources_deps
 }
 
+group("devtools_inspector_overlay_resources") {
+  public_deps = [ "front_end/inspector_overlay:build_inspector_overlay" ]
+}
+
 # Do not use this unless you need unpacked devtools at runtime.
 group("devtools_frontend_resources_data") {
   testonly = true
