--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ config.gypi
 npm-debug.log
 /scripts/protocol_typescript/*.js
 
+/back_end/clang
+/back_end/cmake
+/back_end/protoc
 /build
 /buildtools
 /out
