--- a/test/e2e/BUILD.gn
+++ b/test/e2e/BUILD.gn
@@ -15,6 +15,7 @@ ts_library("e2e") {
     "layers",
     "lighthouse",
     "media",
+    "memory",
     "network",
     "rendering",
     "search",
