--- a/test/e2e/helpers/BUILD.gn
+++ b/test/e2e/helpers/BUILD.gn
@@ -14,6 +14,7 @@ ts_library("helpers") {
     "layers-helpers.ts",
     "lighthouse-helpers.ts",
     "media-helpers.ts",
+    "memory-helpers.ts",
     "quick_open-helpers.ts",
     "search-helpers.ts",
     "settings-helpers.ts",
