--- a/test/e2e/BUILD.gn
+++ b/test/e2e/BUILD.gn
@@ -16,6 +16,7 @@ ts_library("e2e") {
     "lighthouse",
     "media",
     "network",
+    "performance",
     "rendering",
     "search",
     "snippets",
