Rewrite ElementsBreadcrumbs as a TypeScript custom element
This is the first attempt at building a piece of UI in the devtools with
TypeScript and custom elements. This CL also explores how we can interface
between the old code and the new, using events as required.

The _bridge.js file is auto-generated using the component bridges generator.

DISABLE_THIRD_PARTY_CHECK=needed a ts library change

Change-Id: I2ad7d3ab52606b92aa23438f259a253812f55a83

--- a/front_end/elements/BUILD.gn
+++ b/front_end/elements/BUILD.gn
@@ -1,7 +1,16 @@
 import("../../third_party/typescript/typescript.gni")
 
 ts_library("elements") {
-  sources = [ "Adorner.js" ]
+  sources = [
+    "Adorner.js",
+    "ElementsBreadcrumbs.ts",
+    "ElementsBreadcrumbsUtils.ts",
+    "ElementsBreadcrumbs_bridge.js",
+  ]
 
-  deps = [ "../ui" ]
+  deps = [
+    "../platform",
+    "../third_party/lit-html",
+    "../ui",
+  ]
 }
