Libraryize the symbol server to simplify compiling the wasm plugin
Change-Id: If15ae7490e56ada1fa1fee6c4c856f97372bdecf

--- a/back_end/CXXDWARFSymbols/CMakeLists.txt
+++ b/back_end/CXXDWARFSymbols/CMakeLists.txt
@@ -9,11 +9,11 @@ set(SYMBOL_SERVER_SOURCE_DIR ${PROJECT_SOURCE_DIR})
 set(SYMBOL_SERVER_BINARY_DIR ${PROJECT_BINARY_DIR}/bin)
 set(SYMBOL_SERVER_LIBRARY_DIR ${PROJECT_BINARY_DIR}/lib)
 
-# Build dependencies.
+# Build LLVM dependencies.
 set(LLVM_TARGETS_TO_BUILD "WebAssembly" CACHE STRING "")
 set(LLVM_ENABLE_PROJECTS "clang;clang-tools-extra;lldb;lld" CACHE STRING "")
-set(LLVM_DEFAULT_EXTERNAL_LIT
-  ${CMAKE_CURRENT_BINARY_DIR}/third_party/llvm/llvm/bin/llvm-lit CACHE STRING "")
+set(LLVM_ENABLE_RTTI "ON" CACHE STRING "")
+set(LLVM_ENABLE_THREADS "OFF" CACHE STRING "")
 set(LLDB_INCLUDE_TESTS "OFF" CACHE STRING "")
 add_subdirectory(third_party/llvm/llvm)
 set_property(DIRECTORY third_party/llvm/llvm
@@ -48,6 +48,7 @@ endfunction()
 set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
 set(CMAKE_SKIP_BUILD_RPATH FALSE)
 
-add_subdirectory(src)
+add_subdirectory(lib)
+add_subdirectory(driver/lsp)
 add_subdirectory(unittests)
 add_subdirectory(tests)
