Add test case for C++ namespaces
Bug: chromium:1056264
Change-Id: I6e40869b7bafe3f669183e4568f84398beb53d39

--- a/back_end/CXXDWARFSymbols/unittests/Inputs/Makefile
+++ b/back_end/CXXDWARFSymbols/unittests/Inputs/Makefile
@@ -2,6 +2,9 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+#DNCI
+CXX=../../../../out/SymbolServer/third_party/llvm/llvm/bin/clang++
+
 INPUTS=$(wildcard *.cc) $(wildcard *.c)
 CFLAGS=-gfull -O0 --target=wasm32 -nostdlib -fdebug-prefix-map=`pwd`=. \
 	   -Wl,--no-entry,--allow-undefined,--export-all
