Adding a new simple e2e test for the performance panel
Bug: 1079076
Change-Id: Iaea117b0ad7e68d292c6b064a8ffbaf229e433fd

--- a/test/e2e/BUILD.gn
+++ b/test/e2e/BUILD.gn
@@ -17,6 +17,7 @@ ts_library("e2e") {
     "lighthouse",
     "media",
     "network",
+    "performance",
     "profiler",
     "rendering",
     "search",
