--- a/test/e2e/helpers/BUILD.gn
+++ b/test/e2e/helpers/BUILD.gn
@@ -15,6 +15,7 @@ ts_library("helpers") {
     "layers-helpers.ts",
     "lighthouse-helpers.ts",
     "media-helpers.ts",
+    "performance-helpers.ts",
     "profiler-helpers.ts",
     "quick_open-helpers.ts",
     "search-helpers.ts",
