--- a/BUILD.gn
+++ b/BUILD.gn
@@ -927,6 +927,7 @@ devtools_typescript_deps = [
   "front_end/bindings",
   "front_end/browser_sdk",
   "front_end/common:common",
+  "front_end/component_docs",
   "front_end/elements",
   "front_end/formatter_worker",
   "front_end/host",
