Check in devtools-key-value-table
DISABLE_THIRD_PARTY_CHECK=TypeScript fix

Change-Id: I48d35df30e20e226846ac83609786f9cd8dda150

--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -5,7 +5,10 @@
 resources_out_dir = "$root_out_dir/resources/inspector"
 
 group("front_end") {
-  public_deps = [ ":front_end_html_entrypoints" ]
+  public_deps = [
+    ":front_end_html_entrypoints",
+    "generic_components/devtools-key-value-table",
+  ]
 }
 
 copy("front_end_html_entrypoints") {
