--- a/test/e2e/BUILD.gn
+++ b/test/e2e/BUILD.gn
@@ -11,6 +11,7 @@ ts_library("e2e") {
     "animations",
     "application",
     "console",
+    "cross_tool_integration",
     "elements",
     "host",
     "layers",
