--- a/test/e2e/helpers/BUILD.gn
+++ b/test/e2e/helpers/BUILD.gn
@@ -10,6 +10,7 @@ ts_library("helpers") {
     "animations-helpers.ts",
     "application-helpers.ts",
     "console-helpers.ts",
+    "cross-tool-helper.ts",
     "elements-helpers.ts",
     "event-listeners-helpers.ts",
     "layers-helpers.ts",
