--- a/test/e2e/helpers/BUILD.gn
+++ b/test/e2e/helpers/BUILD.gn
@@ -19,6 +19,7 @@ ts_library("helpers") {
     "profiler-helpers.ts",
     "quick_open-helpers.ts",
     "search-helpers.ts",
+    "security-helpers.ts",
     "settings-helpers.ts",
     "sources-helpers.ts",
   ]
