--- a/test/e2e/BUILD.gn
+++ b/test/e2e/BUILD.gn
@@ -10,6 +10,7 @@ ts_library("e2e") {
   deps = [
     "animations",
     "application",
+    "changes",
     "console",
     "coverage",
     "elements",
