--- a/test/e2e/helpers/BUILD.gn
+++ b/test/e2e/helpers/BUILD.gn
@@ -9,6 +9,7 @@ ts_library("helpers") {
   sources = [
     "animations-helpers.ts",
     "application-helpers.ts",
+    "changes-helpers.ts",
     "console-helpers.ts",
     "coverage-helpers.ts",
     "elements-helpers.ts",
