Implement a Chrome Extension Wrapper for the Symbol Server
Bug: chromium:1082697
Change-Id: Id1261ff3dbdf40bfc463a33930d1c7c3d3ca54e9

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1035,6 +1035,8 @@ all_devtools_modules = [
   "bindings/DebuggerWorkspaceBinding.js",
   "bindings/DebuggerLanguagePlugins.js",
   "bindings/language_plugins/CXXDWARFLanguagePlugin.js",
+  "bindings/language_plugins/CXXDWARFWasmPlugin.js",
+  "bindings/language_plugins/CXXDWARFWasmWorker.js",
   "bindings/DefaultScriptMapping.js",
   "bindings/FileUtils.js",
   "bindings/LiveLocation.js",
