WIP: add tests for ShortcutRegistry
Bug: 174309
Change-Id: I27c7feecf119472b2f80851f210e79623fdfb89e

--- a/test/unittests/front_end/ui/BUILD.gn
+++ b/test/unittests/front_end/ui/BUILD.gn
@@ -8,6 +8,7 @@ ts_library("ui") {
     "Geometry_test.ts",
     "Icon_test.ts",
     "ListModel_test.ts",
+    "ShortcutRegistry_test.ts",
     "SyntaxHighlighter_test.ts",
     "UIUtils_test.ts",
     "utils/measured-scrollbar-width_test.ts",
