--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1034,6 +1034,8 @@ all_devtools_modules = [
   "bindings/DebuggerWorkspaceBinding.js",
   "bindings/DebuggerLanguagePlugins.js",
   "bindings/language_plugins/CXXDWARFLanguagePlugin.js",
+  "bindings/language_plugins/CXXDWARFWasmPlugin.js",
+  "bindings/language_plugins/CXXDWARFWasmWorker.js",
   "bindings/DefaultScriptMapping.js",
   "bindings/FileUtils.js",
   "bindings/LiveLocation.js",
