--- a/test/e2e/helpers/BUILD.gn
+++ b/test/e2e/helpers/BUILD.gn
@@ -20,6 +20,7 @@ ts_library("helpers") {
     "lighthouse-helpers.ts",
     "media-helpers.ts",
     "memory-helpers.ts",
+    "network-helper.ts",
     "performance-helpers.ts",
     "profiler-helpers.ts",
     "quick_open-helpers.ts",
