--- a/back_end/CXXDWARFSymbols/CMakeLists.txt
+++ b/back_end/CXXDWARFSymbols/CMakeLists.txt
@@ -16,12 +16,20 @@ set(LLVM_TARGETS_TO_BUILD "WebAssembly" CACHE STRING "")
 set(LLVM_ENABLE_PROJECTS "clang;clang-tools-extra;lldb;lld" CACHE STRING "")
 set(LLDB_INCLUDE_TESTS "OFF" CACHE STRING "")
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SYMBOL_SERVER_BINARY_DIR})
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${SYMBOL_SERVER_LIBRARY_DIR})
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${SYMBOL_SERVER_LIBRARY_DIR})
+
 if (NOT CMAKE_SYSTEM_NAME STREQUAL "Emscripten")
+  set(LLVM_ON_WIN32 0)
+  set(LLVM_ON_UNIX 1)
+  set(SYMBOL_SERVER_TOOL_DIR ${CMAKE_CURRENT_BINARY_DIR})
   set(LLVM_DEFAULT_EXTERNAL_LIT
     ${CMAKE_CURRENT_BINARY_DIR}/third_party/llvm/llvm/bin/llvm-lit CACHE STRING "")
 else()
   set(LLVM_ENABLE_RTTI "ON" CACHE STRING "")
   set(LLVM_ENABLE_THREADS "OFF" CACHE STRING "")
+  set(SYMBOL_SERVER_TOOL_DIR "/lib")
 endif()
 
 add_subdirectory(third_party/llvm/llvm)
