--- a/back_end/CXXDWARFSymbols/lib/CMakeLists.txt
+++ b/back_end/CXXDWARFSymbols/lib/CMakeLists.txt
@@ -2,11 +2,6 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SYMBOL_SERVER_BINARY_DIR})
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${SYMBOL_SERVER_LIBRARY_DIR})
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${SYMBOL_SERVER_LIBRARY_DIR})
-
-set(SYMBOL_SERVER_TOOL_DIR ${CMAKE_CURRENT_BINARY_DIR})
 configure_file(symbol-server-config.h.in
                ${CMAKE_CURRENT_BINARY_DIR}/symbol-server-config.h @ONLY)
 
@@ -78,15 +73,23 @@ if (SYMBOL_SERVER_BUILD_FORMATTERS)
     -I/usr/include/x86_64-linux-gnu/c++/8
     )
 
+  if (CMAKE_SYSTEM_NAME STREQUAL "Emscripten")
+    set(NATIVE_CLANG "clang" CACHE STRING "Native clang")
+    set(compiler "${NATIVE_CLANG}")
+  else()
+    set(compiler "$<TARGET_FILE:clang>")
+  endif()
+
   add_custom_target(SymbolServerRuntime
-    COMMAND $<TARGET_FILE:clang>
+    COMMAND ${compiler}
     ${CMAKE_CURRENT_SOURCE_DIR}/runtime/formatters.cc
     -std=c++14 -emit-llvm -c
     --target=wasm32-unknown-unknown-wasm
     ${_optargs}
     ${_formatter_includes}
-    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/runtime/formatters.cc clang
+    DEPENDS ${compiler}
     BYPRODUCTS formatters.bc
+    SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/runtime/formatters.cc
     )
   add_dependencies(DWARFSymbols SymbolServerRuntime)
 endif()
