[Loc] Migrate coverage to Loc V2
Bug: 1136655
Change-Id: Ie5de60d4e62a1496f9642d8eeed0e326727f17d3

--- a/all_devtools_modules.gni
+++ b/all_devtools_modules.gni
@@ -105,6 +105,7 @@ all_typescript_module_sources = [
   "coverage/CoverageListView.js",
   "coverage/CoverageModel.js",
   "coverage/CoverageView.js",
+  "coverage/ModuleUIStrings.js",
   "css_overview/CSSOverviewCompletedView.js",
   "css_overview/CSSOverviewController.js",
   "css_overview/CSSOverviewModel.js",
