--- a/test/e2e/BUILD.gn
+++ b/test/e2e/BUILD.gn
@@ -38,6 +38,7 @@ node_ts_library("tests") {
     "search",
     "security",
     "sensors",
+    "settings",
     "snippets",
     "sources",
     "webaudio",
