[Recorder] Add recording to DevTools
Change-Id: I58a5add98bf08a8113ecdf674e08911a79f7b12b

--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -71,6 +71,7 @@ group("front_end") {
     "protocol_client:bundle",
     "protocol_monitor:bundle",
     "quick_open:bundle",
+    "recorder:bundle",
     "resources:bundle",
     "screencast:bundle",
     "sdk:bundle",
@@ -200,6 +201,7 @@ group("legacy_entrypoints") {
     "protocol_client:legacy",
     "protocol_monitor:legacy",
     "quick_open:legacy",
+    "recorder:legacy",
     "resources:legacy",
     "root:legacy",
     "screencast:legacy",
