--- a/front_end/devtools_app.json
+++ b/front_end/devtools_app.json
@@ -27,6 +27,7 @@
     { "name": "timeline_model" },
     { "name": "web_audio" },
     { "name": "webauthn"},
+    { "name": "recorder"},
     { "name": "media" }
   ],
   "extends": "shell"
