--- a/BUILD.gn
+++ b/BUILD.gn
@@ -168,6 +168,7 @@ generated_non_autostart_non_remote_modules = [
   "$resources_out_dir/timeline/timeline_module.js",
   "$resources_out_dir/web_audio/web_audio_module.js",
   "$resources_out_dir/webauthn/webauthn_module.js",
+  "$resources_out_dir/recorder/recorder_module.js",
   "$resources_out_dir/workspace_diff/workspace_diff_module.js",
   "$resources_out_dir/emulated_devices/emulated_devices_module.js",
 ]
