Service worker button to show network panel in drawer.
Original PR: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/2403841

Original PR has been reverted because of failing e2e test, fixed faulty e2e test

Bug: 1137050
Change-Id: I7612eedd8a92b5671d365865139ae61f333c9a00

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "check-type": "echo \"If you want to typecheck with TypeScript, run \\\"autoninja -C out/X\\\". If you want to typecheck with Closure, run \\\"npm run check-type-closure\\\"\"",
     "check-type-closure": "python scripts/test/run_type_check.py",
     "components-server": "third_party/node/node.py --output scripts/component_server/server.js",
-    "debug-e2etest": "DEBUG=1 python scripts/test/run_test_suite.py --test-suite=e2e",
+    "debug-e2etest": "set DEBUG=1 && python scripts/test/run_test_suite.py --test-suite=e2e",
     "debug-test": "third_party/node/node.py --output scripts/npm_test.js --debug-devtools",
     "debug-unittest": "DEBUG=1 npm run unittest",
     "e2etest": "python scripts/test/run_test_suite.py --test-suite=e2e",
