Settings: Add e2e tests for shortcuts tab
This CL adds several end to end tests for the shortcuts settings tab,
including the keyboard shortcut editor.

Bug: 174309
Change-Id: I293f233f9afde298cb618fbdbb6c9b147b895daf

--- a/test/e2e/BUILD.gn
+++ b/test/e2e/BUILD.gn
@@ -39,6 +39,7 @@ node_ts_library("tests") {
     "search",
     "security",
     "sensors",
+    "settings",
     "snippets",
     "sources",
     "webaudio",
