New DataGrid component.
This CL introduces the new DataGrid component, and is split into two:

- DataGrid, which is a "plain" component that takes data and renders it.
- DataGridController, which is a "smart" component that can take the
data and manipulate it (e.g. sorting), before passing it into a DataGrid
to be rendered.

These components are not feature complete in that they do not support
all features of the incumbent `DataGrid.js` but they are not designed
to. The goal here is to land the initial data-grid components, and then
work on using them in DevTools (as part of the protocol monitor). At
that point we can extend functionality by seeing what is missing and
testing in DevTools, rather than testing in isolation.

This CL includes the implementation, unit tests and component
documentation examples of the functionality that does exist, along with
a README explaining the two components and when to use each one.

Bug: 1125966
Change-Id: I1b5c9a0174c4563be64b5b4adcc8251d1498b55d

--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -92,6 +92,7 @@ group("front_end") {
     "timeline_model:bundle",
     "toolbox_bootstrap:bundle",
     "ui:bundle",
+    "ui/components:bundle",
     "wasmparser_worker:bundle",
     "web_audio:bundle",
     "webauthn:bundle",
