--- a/devtools_grd_files.gni
+++ b/devtools_grd_files.gni
@@ -30,6 +30,13 @@ grd_files_release_sources = [
   "front_end/Images/cssoverview_icons_2x.png",
   "front_end/Images/elements_panel_icon.svg",
   "front_end/Images/errorWave.svg",
+  "front_end/Images/flex-align-content-center-icon.svg",
+  "front_end/Images/flex-align-content-end-icon.svg",
+  "front_end/Images/flex-align-content-space-around-icon.svg",
+  "front_end/Images/flex-align-content-space-between-icon.svg",
+  "front_end/Images/flex-align-content-space-evenly-icon.svg",
+  "front_end/Images/flex-align-content-start-icon.svg",
+  "front_end/Images/flex-align-content-stretch-icon.svg",
   "front_end/Images/flex-direction-icon.svg",
   "front_end/Images/ic_info_black_18dp.svg",
   "front_end/Images/ic_page_next_16x16_icon.svg",
