[WIP] Support fake connections to the backend
Many unit tests are blocked by the fact that they require the SDK but
the SDK requires a live connection to the backend. This CL introduces a
fake connection that can be used instead, and instantiates an
SDK.CookieModel.CookieModel to demonstrate how it can be used.

Change-Id: I6734c7f69f4f6b8e6433976aa5f38a3dd2e2f99a

--- a/test/unittests/front_end/helpers/BUILD.gn
+++ b/test/unittests/front_end/helpers/BUILD.gn
@@ -11,9 +11,14 @@ ts_library("helpers") {
     "InspectorOverlayHelpers.ts",
     "MutationHelpers.ts",
     "MutationHelpers_test.ts",
+    "TestConnection.ts",
   ]
 
   deps = [
+    "../../../../front_end/common:bundle",
+    "../../../../front_end/protocol_client:bundle",
+    "../../../../front_end/root:bundle",
+    "../../../../front_end/sdk:bundle",
     "../../../../front_end/third_party/lit-html:bundle",
     "../../../../inspector_overlay",
   ]
