--- a/devtools_grd_files.gni
+++ b/devtools_grd_files.gni
@@ -478,6 +478,7 @@ grd_files_debug_sources = [
   "front_end/coverage/CoverageListView.js",
   "front_end/coverage/CoverageModel.js",
   "front_end/coverage/CoverageView.js",
+  "front_end/coverage/ModuleUIStrings.js",
   "front_end/css_overview/CSSOverviewCompletedView.js",
   "front_end/css_overview/CSSOverviewController.js",
   "front_end/css_overview/CSSOverviewModel.js",
