--- a/all_devtools_modules.gni
+++ b/all_devtools_modules.gni
@@ -124,10 +124,6 @@ all_typescript_module_sources = [
   "diff/diff_match_patch.js",
   "dom_extension/DOMExtension.js",
   "elements/Adorner.js",
-  "elements/CSSAngle.js",
-  "elements/CSSAngleRegex.js",
-  "elements/CSSAngleUtils.js",
-  "elements/CSSAngle_bridge.js",
   "elements/CSSPropertyIconResolver.js",
   "elements/ClassesPaneWidget.js",
   "elements/ColorSwatchPopoverIcon.js",
@@ -223,6 +219,10 @@ all_typescript_module_sources = [
   "i18n/i18nImpl.js",
   "inline_editor/BezierEditor.js",
   "inline_editor/BezierUI.js",
+  "inline_editor/CSSAngle.js",
+  "inline_editor/CSSAngleRegex.js",
+  "inline_editor/CSSAngleUtils.js",
+  "inline_editor/CSSAngle_bridge.js",
   "inline_editor/CSSShadowEditor.js",
   "inline_editor/CSSShadowModel.js",
   "inline_editor/CSSVarSwatch.js",
