--- a/devtools_grd_files.gni
+++ b/devtools_grd_files.gni
@@ -38,6 +38,12 @@ grd_files_release_sources = [
   "front_end/Images/flex-align-content-start-icon.svg",
   "front_end/Images/flex-align-content-stretch-icon.svg",
   "front_end/Images/flex-direction-icon.svg",
+  "front_end/Images/flex-justify-content-center-icon.svg",
+  "front_end/Images/flex-justify-content-flex-end-icon.svg",
+  "front_end/Images/flex-justify-content-flex-start-icon.svg",
+  "front_end/Images/flex-justify-content-space-around-icon.svg",
+  "front_end/Images/flex-justify-content-space-between-icon.svg",
+  "front_end/Images/flex-justify-content-space-evenly-icon.svg",
   "front_end/Images/ic_info_black_18dp.svg",
   "front_end/Images/ic_page_next_16x16_icon.svg",
   "front_end/Images/ic_page_prev_16x16_icon.svg",
