--- a/devtools_image_files.gni
+++ b/devtools_image_files.gni
@@ -32,6 +32,12 @@ devtools_image_files = [
   "flex-align-content-space-between-icon.svg",
   "flex-align-content-space-evenly-icon.svg",
   "flex-align-content-stretch-icon.svg",
+  "flex-justify-content-center-icon.svg",
+  "flex-justify-content-flex-end-icon.svg",
+  "flex-justify-content-flex-start-icon.svg",
+  "flex-justify-content-space-around-icon.svg",
+  "flex-justify-content-space-between-icon.svg",
+  "flex-justify-content-space-evenly-icon.svg",
   "ic_info_black_18dp.svg",
   "ic_page_next_16x16_icon.svg",
   "ic_page_prev_16x16_icon.svg",
