Extract Lighthouse ReportRender types into proper exports
These types are used by Closure to typecheck numerous LightHouse integrations,
where the LightHouse bundle puts these classes on the global scope.
To make these typecheckable with TypeScript, move these into
proper exported classes/typedefs.

R=jacktfranklin@chromium.org

Bug: 1011811
Change-Id: Iab9b1e3391ddcfcbafa0ebac23ba81af674d1f75

--- a/all_devtools_modules.gni
+++ b/all_devtools_modules.gni
@@ -258,6 +258,7 @@ all_typescript_module_sources = [
   "lighthouse/LighthouseProtocolService.js",
   "lighthouse/LighthouseReportRenderer.js",
   "lighthouse/LighthouseReportSelector.js",
+  "lighthouse/LighthouseReporterTypes.js",
   "lighthouse/LighthouseStartView.js",
   "lighthouse/LighthouseStatusView.js",
   "lighthouse/RadioSetting.js",
