--- a/devtools_grd_files.gni
+++ b/devtools_grd_files.gni
@@ -619,6 +619,7 @@ grd_files_debug_sources = [
   "front_end/lighthouse/LighthouseProtocolService.js",
   "front_end/lighthouse/LighthouseReportRenderer.js",
   "front_end/lighthouse/LighthouseReportSelector.js",
+  "front_end/lighthouse/LighthouseReporterTypes.js",
   "front_end/lighthouse/LighthouseStartView.js",
   "front_end/lighthouse/LighthouseStatusView.js",
   "front_end/lighthouse/RadioSetting.js",
