Migrate Map.proto.inverse into MapUtilities.
Bug: 1050549
Change-Id: If3b142918be6a4e01bd899d685671a5018c5e0c6

--- a/all_devtools_modules.gni
+++ b/all_devtools_modules.gni
@@ -346,6 +346,7 @@ all_typescript_module_sources = [
   "platform/UIString.js",
   "platform/array-utilities.js",
   "platform/date-utilities.js",
+  "platform/map-utilities.js",
   "platform/number-utilities.js",
   "platform/set-utilities.js",
   "platform/string-utilities.js",
