--- a/all_devtools_modules.gni
+++ b/all_devtools_modules.gni
@@ -266,7 +266,10 @@ all_typescript_module_sources = [
   "linear_memory_inspector/LinearMemoryInspectorUtils.js",
   "linear_memory_inspector/LinearMemoryInspector_bridge.js",
   "linear_memory_inspector/LinearMemoryNavigator.js",
+  "linear_memory_inspector/LinearMemoryValueInterpreter.js",
   "linear_memory_inspector/LinearMemoryViewer.js",
+  "linear_memory_inspector/ValueInterpreterDisplay.js",
+  "linear_memory_inspector/ValueInterpreterDisplayUtils.js",
   "main/ExecutionContextSelector.js",
   "main/MainImpl.js",
   "main/SimpleApp.js",
