Add align-items icons to the styles panel
This CL adds new icons for several align-items properties
that are adjusted based on the flex-direction, direction and
writing-mode.

Screenshot: https://i.imgur.com/tBKPbru.png
Bug: 1139945
Change-Id: I883f7b835da5dd5e6e948817859060ae0ccaef56

--- a/devtools_image_files.gni
+++ b/devtools_image_files.gni
@@ -38,6 +38,9 @@ devtools_image_files = [
   "flex-justify-content-space-around-icon.svg",
   "flex-justify-content-space-between-icon.svg",
   "flex-justify-content-space-evenly-icon.svg",
+  "flex-align-items-flex-start-icon.svg",
+  "flex-align-items-flex-end-icon.svg",
+  "flex-align-items-stretch-icon.svg",
   "ic_info_black_18dp.svg",
   "ic_page_next_16x16_icon.svg",
   "ic_page_prev_16x16_icon.svg",
