--- a/devtools_grd_files.gni
+++ b/devtools_grd_files.gni
@@ -37,6 +37,9 @@ grd_files_release_sources = [
   "front_end/Images/flex-align-content-space-evenly-icon.svg",
   "front_end/Images/flex-align-content-start-icon.svg",
   "front_end/Images/flex-align-content-stretch-icon.svg",
+  "front_end/Images/flex-align-items-flex-end-icon.svg",
+  "front_end/Images/flex-align-items-flex-start-icon.svg",
+  "front_end/Images/flex-align-items-stretch-icon.svg",
   "front_end/Images/flex-direction-icon.svg",
   "front_end/Images/flex-justify-content-center-icon.svg",
   "front_end/Images/flex-justify-content-flex-end-icon.svg",
