--- a/front_end/issues/BUILD.gn
+++ b/front_end/issues/BUILD.gn
@@ -8,7 +8,7 @@ import("../../scripts/build/ninja/devtools_module.gni")
 devtools_module("issues") {
   sources = [
     "IssueAggregator.js",
-    "IssueRevealer.js",
+    "IssueRevealer.ts",
     "IssuesPane.js",
     "MarkdownIssueDescription.js",
     "MarkdownView.ts",
@@ -31,7 +31,7 @@ devtools_module("issues") {
 }
 
 devtools_entrypoint("bundle") {
-  entrypoint = "issues.js"
+  entrypoint = "issues.ts"
 
   deps = [ ":issues" ]
 }
