--- a/front_end/inline_editor/BUILD.gn
+++ b/front_end/inline_editor/BUILD.gn
@@ -20,6 +20,9 @@ devtools_module("inline_editor") {
     "CSSVarSwatch_bridge.js",
     "ColorSwatch.ts",
     "ColorSwatch_bridge.js",
+    "FontEditor.js",
+    "FontEditorUnitConverter.js",
+    "FontEditorUtils.js",
     "SwatchPopoverHelper.js",
     "Swatches.js",
   ]
@@ -29,7 +32,9 @@ devtools_module("inline_editor") {
     "../common:bundle",
     "../component_helpers:bundle",
     "../components:bundle",
+    "../css_overview:bundle",
     "../platform:bundle",
+    "../sdk:bundle",
     "../text_utils:bundle",
     "../third_party/lit-html:bundle",
     "../ui:bundle",
@@ -45,7 +50,11 @@ copy_to_gen("legacy_css") {
 devtools_entrypoint("bundle") {
   entrypoint = "inline_editor.js"
 
-  deps = [ ":inline_editor" ]
+  deps = [
+    ":inline_editor",
+    "../css_overview:bundle",
+    "../sdk:bundle",
+  ]
 }
 
 devtools_entrypoint("legacy") {
