Add value interpreter to linear memory inspector
This adds the value interpreter that is used to view
a value at an address, interpreted as different data types.

Before: https://imgur.com/a/5caDiI8
After: https://imgur.com/a/c3Z7zaq

Bug: chromium:1110202
Change-Id: Ib40cb7eb8f86c8cdae91854cb73c6530a7538f77

--- a/devtools_image_files.gni
+++ b/devtools_image_files.gni
@@ -22,6 +22,7 @@ devtools_image_files = [
   "chromeSelect_2x.png",
   "chromeSelect.png",
   "cssoverview_icons_2x.png",
+  "dropdown_7x6_icon.svg",
   "elements_panel_icon.svg",
   "errorWave.svg",
   "flex-direction-icon.svg",
@@ -77,6 +78,7 @@ devtools_image_files = [
   "searchNext.png",
   "searchPrev.png",
   "securityIcons.svg",
+  "settings_14x14_icon.svg",
   "smallIcons.svg",
   "speech.png",
   "toolbarResizerVertical.png",
