--- a/devtools_grd_files.gni
+++ b/devtools_grd_files.gni
@@ -28,6 +28,7 @@ grd_files_release_sources = [
   "front_end/Images/chromeSelect.png",
   "front_end/Images/chromeSelect_2x.png",
   "front_end/Images/cssoverview_icons_2x.png",
+  "front_end/Images/dropdown_7x6_icon.svg",
   "front_end/Images/elements_panel_icon.svg",
   "front_end/Images/errorWave.svg",
   "front_end/Images/flex-align-content-center-icon.svg",
@@ -84,6 +85,7 @@ grd_files_release_sources = [
   "front_end/Images/searchNext.png",
   "front_end/Images/searchPrev.png",
   "front_end/Images/securityIcons.svg",
+  "front_end/Images/settings_14x14_icon.svg",
   "front_end/Images/smallIcons.svg",
   "front_end/Images/speech.png",
   "front_end/Images/toolbarResizerVertical.png",
@@ -636,7 +638,10 @@ grd_files_debug_sources = [
   "front_end/linear_memory_inspector/LinearMemoryInspectorUtils.js",
   "front_end/linear_memory_inspector/LinearMemoryInspector_bridge.js",
   "front_end/linear_memory_inspector/LinearMemoryNavigator.js",
+  "front_end/linear_memory_inspector/LinearMemoryValueInterpreter.js",
   "front_end/linear_memory_inspector/LinearMemoryViewer.js",
+  "front_end/linear_memory_inspector/ValueInterpreterDisplay.js",
+  "front_end/linear_memory_inspector/ValueInterpreterDisplayUtils.js",
   "front_end/main/ExecutionContextSelector.js",
   "front_end/main/MainImpl.js",
   "front_end/main/SimpleApp.js",
