--- a/devtools_grd_files.gni
+++ b/devtools_grd_files.gni
@@ -16,6 +16,7 @@ grd_files_release_sources = [
   "front_end/Images/accelerometer-left.png",
   "front_end/Images/accelerometer-right.png",
   "front_end/Images/accelerometer-top.png",
+  "front_end/Images/baseline-icon.svg",
   "front_end/Images/breaking_change_icon.svg",
   "front_end/Images/checkboxCheckmark.svg",
   "front_end/Images/checker.png",
