Add baseline icons for flexbox properties in the Styles panel
Screenshot: https://i.imgur.com/2h8TFbA.png

Bug: 1139945
Change-Id: Ieb39f713826b867ee0241baa8fecbd1aeb2dd86d

--- a/devtools_image_files.gni
+++ b/devtools_image_files.gni
@@ -42,6 +42,7 @@ devtools_image_files = [
   "flex-align-items-flex-start-icon.svg",
   "flex-align-items-flex-end-icon.svg",
   "flex-align-items-stretch-icon.svg",
+  "baseline-icon.svg",
   "ic_info_black_18dp.svg",
   "ic_page_next_16x16_icon.svg",
   "ic_page_prev_16x16_icon.svg",
