Add thin feedback icon
Adds a feedback icon that matches the stroke-width of other icons in the Issue panel.

Screenshot: https://i.imgur.com/qGUf9cP.png
Change-Id: I13a6e5da298b04348e26db96a7e8176440721b07

--- a/devtools_image_files.gni
+++ b/devtools_image_files.gni
@@ -87,6 +87,7 @@ devtools_image_files = [
   "touchCursor.png",
   "treeoutlineTriangles.svg",
   "whatsnew.png",
+  "feedback_thin_16x16_icon.svg",
 ]
 
 front_end_image_files = []
