--- a/devtools_grd_files.gni
+++ b/devtools_grd_files.gni
@@ -32,6 +32,7 @@ grd_files_release_sources = [
   "front_end/Images/dropdown_7x6_icon.svg",
   "front_end/Images/elements_panel_icon.svg",
   "front_end/Images/errorWave.svg",
+  "front_end/Images/feedback_thin_16x16_icon.svg",
   "front_end/Images/flex-align-content-center-icon.svg",
   "front_end/Images/flex-align-content-end-icon.svg",
   "front_end/Images/flex-align-content-space-around-icon.svg",
