[tests] Add unit test for BinaryResourceView
Ported from http/tests/devtools/unit/binary-resource-view.js

Change-Id: I2226aab7825a564138a4f41c5c3510554f1f3cbb

--- a/test/unittests/front_end/BUILD.gn
+++ b/test/unittests/front_end/BUILD.gn
@@ -24,6 +24,7 @@ group("front_end") {
     "protocol_client",
     "root",
     "sdk",
+    "source_frame",
     "sources",
     "test_setup",
     "text_utils",
