--- a/devtools_image_files.gni
+++ b/devtools_image_files.gni
@@ -42,6 +42,10 @@ devtools_image_files = [
   "flex-align-items-flex-start-icon.svg",
   "flex-align-items-flex-end-icon.svg",
   "flex-align-items-stretch-icon.svg",
+  "flex-align-self-center-icon.svg",
+  "flex-align-self-flex-end-icon.svg",
+  "flex-align-self-flex-start-icon.svg",
+  "flex-align-self-stretch-icon.svg",
   "baseline-icon.svg",
   "ic_info_black_18dp.svg",
   "ic_page_next_16x16_icon.svg",
