--- a/devtools_grd_files.gni
+++ b/devtools_grd_files.gni
@@ -43,6 +43,10 @@ grd_files_release_sources = [
   "front_end/Images/flex-align-items-flex-end-icon.svg",
   "front_end/Images/flex-align-items-flex-start-icon.svg",
   "front_end/Images/flex-align-items-stretch-icon.svg",
+  "front_end/Images/flex-align-self-center-icon.svg",
+  "front_end/Images/flex-align-self-flex-end-icon.svg",
+  "front_end/Images/flex-align-self-flex-start-icon.svg",
+  "front_end/Images/flex-align-self-stretch-icon.svg",
   "front_end/Images/flex-direction-icon.svg",
   "front_end/Images/flex-justify-content-center-icon.svg",
   "front_end/Images/flex-justify-content-flex-end-icon.svg",
