--- a/front_end/browser_debugger/BUILD.gn
+++ b/front_end/browser_debugger/BUILD.gn
@@ -7,6 +7,7 @@ import("../../scripts/build/ninja/devtools_module.gni")
 
 devtools_module("browser_debugger") {
   sources = [
+    "CSPViolationBreakpointsSidebarPane.js",
     "DOMBreakpointsSidebarPane.js",
     "EventListenerBreakpointsSidebarPane.js",
     "ObjectEventListenersSidebarPane.js",
