--- a/front_end/main/BUILD.gn
+++ b/front_end/main/BUILD.gn
@@ -31,7 +31,7 @@ devtools_module("main") {
 }
 
 devtools_entrypoint("bundle") {
-  entrypoint = "main.js"
+  entrypoint = "main.ts"
 
   deps = [ ":main" ]
 }
