--- a/all_devtools_modules.gni
+++ b/all_devtools_modules.gni
@@ -744,6 +744,10 @@ all_typescript_module_sources = [
   "ui/XLink.js",
   "ui/XWidget.js",
   "ui/ZoomManager.js",
+  "ui/components/DataGrid.js",
+  "ui/components/DataGridController.js",
+  "ui/components/DataGridUtils.js",
+  "ui/components/components.js",
   "ui/utils/append-style.js",
   "ui/utils/create-shadow-root-with-core-styles.js",
   "ui/utils/focus-changed.js",
