--- a/all_devtools_modules.gni
+++ b/all_devtools_modules.gni
@@ -238,6 +238,7 @@ all_typescript_module_sources = [
   "inspector_main/RenderingOptions.js",
   "issues/IssueAggregator.js",
   "issues/IssueRevealer.js",
+  "issues/IssueSurveyLink.js",
   "issues/IssuesPane.js",
   "issues/MarkdownIssueDescription.js",
   "issues/MarkdownView.js",
