--- a/front_end/issues/BUILD.gn
+++ b/front_end/issues/BUILD.gn
@@ -9,6 +9,7 @@ devtools_module("issues") {
   sources = [
     "IssueAggregator.js",
     "IssueRevealer.js",
+    "IssueSurveyLink.ts",
     "IssuesPane.js",
     "MarkdownIssueDescription.js",
     "MarkdownView.ts",
