Remove _impl suffix from overlay filenames
This change removes _impl suffix in file names that was used to
separate the implementation from the entrypoint modules. Also,
I renamed tool_highlight_grid to tool_grid to shorten the name.

Change-Id: Iaa2bde502f31154027ad33819e1bf111dd7421d8

--- a/inspector_overlay/BUILD.gn
+++ b/inspector_overlay/BUILD.gn
@@ -17,18 +17,18 @@ python2_action("build_inspector_overlay") {
     "$target_gen_dir/css_grid_label_helpers.js",
     "$target_gen_dir/highlight_common.js",
     "$target_gen_dir/highlight_grid_common.js",
-    "$target_gen_dir/tool_distances_impl.js",
-    "$target_gen_dir/tool_highlight_grid_impl.js",
-    "$target_gen_dir/tool_highlight_grid.css",
-    "$target_gen_dir/tool_highlight_impl.js",
+    "$target_gen_dir/tool_distances.js",
+    "$target_gen_dir/tool_grid.js",
+    "$target_gen_dir/tool_grid.css",
+    "$target_gen_dir/tool_highlight.js",
     "$target_gen_dir/tool_highlight.css",
-    "$target_gen_dir/tool_paused_impl.js",
+    "$target_gen_dir/tool_paused.js",
     "$target_gen_dir/tool_paused.css",
-    "$target_gen_dir/tool_screenshot_impl.js",
+    "$target_gen_dir/tool_screenshot.js",
     "$target_gen_dir/tool_screenshot.css",
-    "$target_gen_dir/tool_source_order_impl.js",
+    "$target_gen_dir/tool_source_order.js",
     "$target_gen_dir/tool_source_order.css",
-    "$target_gen_dir/tool_viewport_size_impl.js",
+    "$target_gen_dir/tool_viewport_size.js",
     "$target_gen_dir/main.js",
   ]
 
@@ -60,8 +60,8 @@ copy("copy_resources") {
 copy("copy_css_to_gen") {
   sources = [
     "common.css",
+    "tool_grid.css",
     "tool_highlight.css",
-    "tool_highlight_grid.css",
     "tool_paused.css",
     "tool_screenshot.css",
     "tool_source_order.css",
@@ -76,13 +76,13 @@ ts_library("inspector_overlay") {
     "highlight_common.ts",
     "highlight_grid_common.ts",
     "main.ts",
-    "tool_distances_impl.ts",
-    "tool_highlight_grid_impl.ts",
-    "tool_highlight_impl.ts",
-    "tool_paused_impl.ts",
-    "tool_screenshot_impl.ts",
-    "tool_source_order_impl.ts",
-    "tool_viewport_size_impl.ts",
+    "tool_distances.ts",
+    "tool_grid.ts",
+    "tool_highlight.ts",
+    "tool_paused.ts",
+    "tool_screenshot.ts",
+    "tool_source_order.ts",
+    "tool_viewport_size.ts",
   ]
 
   deps = [ "../front_end/common:bundle" ]
