--- a/devtools_grd_files.gni
+++ b/devtools_grd_files.gni
@@ -642,6 +642,7 @@ grd_files_debug_sources = [
   "front_end/lighthouse/LighthouseStatusView.js",
   "front_end/lighthouse/RadioSetting.js",
   "front_end/linear_memory_inspector/LinearMemoryInspector.js",
+  "front_end/linear_memory_inspector/LinearMemoryInspectorPane.js",
   "front_end/linear_memory_inspector/LinearMemoryInspectorUtils.js",
   "front_end/linear_memory_inspector/LinearMemoryInspector_bridge.js",
   "front_end/linear_memory_inspector/LinearMemoryNavigator.js",
