--- a/front_end/linear_memory_inspector/BUILD.gn
+++ b/front_end/linear_memory_inspector/BUILD.gn
@@ -8,6 +8,7 @@ import("../../scripts/build/ninja/devtools_module.gni")
 devtools_module("linear_memory_inspector") {
   sources = [
     "LinearMemoryInspector.ts",
+    "LinearMemoryInspectorPane.js",
     "LinearMemoryInspectorUtils.ts",
     "LinearMemoryInspector_bridge.js",
     "LinearMemoryNavigator.ts",
