[surveys] Add the UI for showing a survey link in IssueView
These links are only shown after we check with the backend that the
survey is available. Currently no triggers are included so no surveys
will be shown, but this is in preparation.

Link: https://imgur.com/LN0U6Sn
Pending: https://imgur.com/R56jxBl
Finished: https://imgur.com/NNxQOGX
Error: https://imgur.com/vLHFzL1

Bug: 1112738
Change-Id: Iffc2f7fcf56234db12f4a68feff2561a5b9cdd41

--- a/front_end/component_docs/BUILD.gn
+++ b/front_end/component_docs/BUILD.gn
@@ -10,6 +10,7 @@ group("component_docs") {
     "./data_grid_controller",
     "./elements_breadcrumbs",
     "./icon_component",
+    "./issue_survey_link",
     "./layout_pane",
     "./linear_memory_inspector",
     "./perf_piechart",
