--- a/devtools_grd_files.gni
+++ b/devtools_grd_files.gni
@@ -617,6 +617,7 @@ grd_files_debug_sources = [
   "front_end/inspector_main/RenderingOptions.js",
   "front_end/issues/IssueAggregator.js",
   "front_end/issues/IssueRevealer.js",
+  "front_end/issues/IssueSurveyLink.js",
   "front_end/issues/IssuesPane.js",
   "front_end/issues/MarkdownIssueDescription.js",
   "front_end/issues/MarkdownView.js",
