[Loc] Migrate emulation to Localization V2
Bug: 1136655
Change-Id: I935a118ad134ebce061395baf1e6721cef85d7c5

--- a/devtools_grd_files.gni
+++ b/devtools_grd_files.gni
@@ -386,6 +386,7 @@ grd_files_release_sources = [
 ]
 
 grd_files_debug_sources = [
+  "emulation/ModuleUIStrings.js",
   "front_end/accessibility/ARIAAttributesView.js",
   "front_end/accessibility/ARIAMetadata.js",
   "front_end/accessibility/AXBreadcrumbsPane.js",
