--- a/test/unittests/front_end/elements/BUILD.gn
+++ b/test/unittests/front_end/elements/BUILD.gn
@@ -8,12 +8,14 @@ ts_library("elements") {
     "ComputedStyleProperty_test.ts",
     "ComputedStyleTrace_test.ts",
     "ElementsBreadcrumbs_test.ts",
+    "ElementsImport_test.ts",
     "LayoutPane_test.ts",
     "NodeText_test.ts",
   ]
 
   deps = [
     "../../../../front_end/elements",
+    "../../../../front_end/elements:bundle",
     "../../../../front_end/inline_editor:bundle",
     "../../../../front_end/ui:bundle",
     "../helpers",
