Add AnimationModel instantiation test
R=tvanderlippe@chromium.org

Change-Id: I7a1991a1bbcb60e6b2d0c9dc7f084ab38dd8d387

--- a/test/unittests/front_end/BUILD.gn
+++ b/test/unittests/front_end/BUILD.gn
@@ -5,6 +5,8 @@
 group("front_end") {
   deps = [
     "../../../front_end/Images",
+    "accessibility",
+    "animation",
     "bindings",
     "browser_sdk",
     "client_variations",
