--- a/front_end/panels/developer_resources/BUILD.gn
+++ b/front_end/panels/developer_resources/BUILD.gn
@@ -43,6 +43,7 @@ devtools_entrypoint("bundle") {
   visibility = [
     ":*",
     "../../../test/unittests/front_end/entrypoints/missing_entrypoints/*",
+    "../../../test/unittests/front_end/panels/developer_resources/*",
     "../../entrypoints/*",
   ]
 
