--- a/test/unittests/front_end/BUILD.gn
+++ b/test/unittests/front_end/BUILD.gn
@@ -31,6 +31,7 @@ group("front_end") {
     "panels/application",
     "panels/console",
     "panels/coverage",
+    "panels/developer_resources",
     "panels/elements",
     "panels/issues",
     "panels/media",
