--- a/test/unittests/front_end/helpers/BUILD.gn
+++ b/test/unittests/front_end/helpers/BUILD.gn
@@ -16,6 +16,7 @@ ts_library("helpers") {
     "RealConnection.ts",
     "SourceMapEncoder.ts",
     "SourceMapEncoder_test.ts",
+    "TimelineHelpers.ts",
     "UISourceCodeHelpers.ts",
     "UserMetricsHelpers.ts",
   ]
