--- a/front_end/core/sdk/BUILD.gn
+++ b/front_end/core/sdk/BUILD.gn
@@ -37,6 +37,7 @@ devtools_module("sdk") {
     "DOMDebuggerModel.ts",
     "DOMModel.ts",
     "DebuggerModel.ts",
+    "DebuggerStateMachine.ts",
     "EmulationModel.ts",
     "EventBreakpointsModel.ts",
     "FilmStripModel.ts",
