--- a/test/unittests/front_end/core/sdk/BUILD.gn
+++ b/test/unittests/front_end/core/sdk/BUILD.gn
@@ -10,13 +10,14 @@ ts_library("sdk") {
     "AccessibilityModel_test.ts",
     "CSSContainerQuery_test.ts",
     "CSSPropertyParser_test.ts",
+    "CSSProperty_test.ts",
     "ConsoleModel_test.ts",
     "CookieModel_test.ts",
     "CookieParser_test.ts",
     "Cookie_test.ts",
-    "CSSProperty_test.ts",
     "DOMModel_test.ts",
     "DebuggerModel_test.ts",
+    "DebuggerStateMachine_test.ts",
     "FrameManager_test.ts",
     "NetworkManager_test.ts",
     "OverlayColorGenerator_test.ts",
