Fix another flaky e2e-test in network_test.ts
Bug: 1093287
Change-Id: I99ce4fe42839a77f6b56a8b2fea7a28df0ceb713

--- a/test/e2e/resources/network/BUILD.gn
+++ b/test/e2e/resources/network/BUILD.gn
@@ -15,6 +15,7 @@ copy_to_gen("network") {
     "last-modified.html",
     "last-modified.rawresponse",
     "requests.html",
+    "requests.js",
     "resources-from-cache.html",
     "resources-from-webbundle-with-bad-inner-request.html",
     "resources-from-webbundle-with-bad-metadata.html",
